17 November 2015: Wouter
	- Fix #594. libunbound: optionally use libnettle for crypto.
	  Contributed by Luca Bruno.  Added --with-nettle for use with
	  --with-libunbound-only.
	- refactor nsec3 hash implementation to be more library-portable.
	- iana portlist update.

16 November 2015: Wouter
	- Fix for lenient accept of reverse order DNAME and CNAME.

6 November 2015: Wouter
	- Change example.conf: ftp.internic.net to https://www.internic.net

5 November 2015: Wouter
	- ACX_SSL_CHECKS no longer adds -ldl needlessly.

3 November 2015: Wouter
	- Fix #718: Fix unbound-control-setup with support for env
	  without HEREDOC bash support.

29 October 2015: Wouter
	- patch from Doug Hogan for SSL_OP_NO_SSLvx options.
	- Fix #716: nodata proof with empty non-terminals and wildcards.

28 October 2015: Wouter
	- Fix checklock testcode for linux threads on exit.

27 October 2015: Wouter
	- isblank() compat implementation.
	- detect libexpat without xml_StopParser function.
	- portability fixes.
	- portability, replace snprintf if return value broken.

23 October 2015: Wouter
	- Fix #714: Document config to block private-address for IPv4
	  mapped IPv6 addresses.

22 October 2015: Wouter
	- Fix #712: unbound-anchor appears to not fsync root.key.

20 October 2015: Wouter
	- 1.5.6 release.
	- trunk tracks development of 1.5.7.

15 October 2015: Wouter
	- Fix segfault in the dns64 module in the formaterror error path.
	- Fix sldns_wire2str_rdata_scan for malformed RRs.
	- tag for 1.5.6rc1 release.

14 October 2015: Wouter
	- ANY responses include DNAME records if present, as per Evan Hunt's
	  remark in dnsop.
	- Fix manpage to suggest using SIGTERM to terminate the server.

9 October 2015: Wouter
	- Default for ssl-port is port 853, the temporary port assignment
	  for secure domain name system traffic.
	  If you used to rely on the older default of port 443, you have
	  to put a clause in unbound.conf for that.  The new value is likely